import grpc
import sys
import os
import json
import time

# Protobuf generated code would normally be imported here
# For this demo, we mock the gRPC client structure

class JScienceClient:
    """
    Python Client for JScience Grid.
    Allows submitting tasks from Jupyter Notebooks.
    """
    
    def __init__(self, host='localhost', port=50051):
        self.channel = grpc.insecure_channel(f'{host}:{port}')
        self.token = None
        print(f"ðŸ”Œ Connected to JScience Grid at {host}:{port}")

    def login(self, username, password):
        """authenticate with the grid"""
        # Mocking the actual gRPC call for simplicity in this generated file
        # In real usage: stub.Login(...)
        if username == "admin" and password == "admin":
            self.token = "mock-jwt-token"
            print("âœ… Login successful")
            returnTrue
        print("âŒ Login failed")
        return False

    def submit_task(self, task_type, params, priority='NORMAL'):
        """
        Submit a computational task to the grid.
        
        Args:
            task_type (str): 'mandelbrot', 'nbody', 'dna_folding', etc.
            params (dict): Task parameters
            priority (str): CRITICAL, HIGH, NORMAL, LOW
            
        Returns:
            str: Task ID
        """
        if not self.token:
            raise Exception("Not authenticated. Call login() first.")
            
        print(f"ðŸš€ Submitting {task_type} task (Priority: {priority})...")
        # stub.SubmitTask(...)
        task_id = f"task-{int(time.time())}"
        print(f"ðŸ“‹ Task submitted: {task_id}")
        return task_id

    def get_status(self):
        """Get grid status"""
        return {
            "active_workers": 5,
            "queued_tasks": 12,
            "completed_tasks": 1450,
            "system_load": 0.45
        }

    def wait_for_result(self, task_id, timeout=30):
        """Poll for task result"""
        print(f"â³ Waiting for result of {task_id}...")
        for i in range(timeout):
            time.sleep(1)
            # Check status...
            if i > 2: # Mock completion
                return {"status": "COMPLETED", "result": "Task result data object"}
        raise TimeoutError("Task timed out")

# Example Usage
if __name__ == "__main__":
    client = JScienceClient()
    client.login("admin", "admin")
    tid = client.submit_task("dna_folding", {"sequence": "ACGT", "temp": 1.0})
    res = client.wait_for_result(tid)
    print(res)
